<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Sokoban</string>
<string name="back_button">Back</string>
<string name="game_undo">Undo</string>
<string name="game_restart">Do you want to reset the level?\n\nYour progress on this level will be lost!</string>
<string name="game_leave">Leave</string>
<string name="level_easy">Microban</string>
<string name="level_original">Original</string>
<string name="level_masSasquatch">Mas Sasquatch</string>
<string name="level_SasIIIButton">Sasquatch III</string>
<string name="level_SasIVButton">Sasquatch IV</string>
</resources>
