<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:gravity="center_vertical" >

    <Button
        android:id="@+id/levelsMicrobanEasyButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        android:text="@string/level_easy" />

    <Button
        android:id="@+id/levelsOriginalButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/levelsMicrobanEasyButton"
        android:onClick="onButtonClicked"
        android:text="@string/level_original" />

    <Button
        android:id="@+id/levelsMasSasquatchButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/levelsOriginalButton"
        android:onClick="onButtonClicked"
        android:text="@string/level_masSasquatch" />

    <Button
        android:id="@+id/levelsSasIIIButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/levelsMasSasquatchButton"
        android:onClick="onButtonClicked"
        android:text="@string/level_SasIIIButton" />

    <Button
        android:id="@+id/levelsSasIVButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/levelsSasIIIButton"
        android:onClick="onButtonClicked"
        android:text="@string/level_SasIVButton" />

</RelativeLayout>
